[package]
name = "cu-dds"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Copper example to use Iceoryx2 as a middleware."

[package.metadata.cargo-machete]
ignored = ["bincode", "cu-caterpillar", "cu-consolemon"]

[dependencies]
rustdds = { version = "0.11.3" }
cu29 = { workspace = true }
cu29-helpers = { workspace = true }
bincode = { workspace = true }  # needed
cu-consolemon = { path = "../../components/monitors/cu_consolemon" , version = "0.6.0"}  # needed
cu-caterpillar = { path = "../cu_caterpillar" , version = "0.6.0"}  # needed
# cu-dds-sink = { path = "../../components/sinks/cu_dds_sink" , version ="0.6.0"}
cu-dds-src = { path = "../../components/sources/cu_dds_src" , version = "0.6.0"}
